--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,5 @@
 {
-	"env": {
-		"es6": true
-	},
-	"parserOptions": {
-		"ecmaVersion": 6
-	},
-	"extends": "eslint:recommended",
+	"extends": "airbnb-base",
 	"rules": {
 		"arrow-parens": [
 			2,
@@ -17,20 +11,44 @@
 			"1tbs",
 			{ "allowSingleLine": true }
 		],
+		"capitalized-comments": [
+			2,
+			"always",
+			{
+				"ignoreInlineComments": true
+			}
+		],
 		"eqeqeq": [
 			2,
 			"smart"
 		],
+		"func-names": 0,
+		"global-require": 1,
+		"import/no-extraneous-dependencies": 0,
 		"indent": [
 			2,
 			"tab"
+		],
+		"key-spacing": [
+			2,
+			{
+				"beforeColon": false,
+				"afterColon": true,
+				"align": "value"
+			}
 		],
 		"linebreak-style": [
 			2,
 			"unix"
 		],
+		"newline-per-chained-call": 0,
 		"no-console": 2,
+		"no-mixed-spaces-and-tabs": 2,
+		"no-param-reassign": 0,
+		"no-prototype-builtins": 0,
+		"no-return-await": 2,
 		"no-trailing-spaces": 2,
+		"no-underscore-dangle": 0,
 		"no-var": 2,
 		"prefer-arrow-callback": 1,
 		"prefer-const": 2,
@@ -41,6 +59,7 @@
 			2,
 			"single"
 		],
+		"require-await": 2,
 		"require-jsdoc": [
 			2,
 			{
