--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "devDependencies": {
     "eslint": "^3.11.1",
-    "eslint-config-airbnb-base": "^10.0.1",
     "eslint-find-rules": "^1.14.3",
     "eslint-plugin-import": "^2.2.0",
     "safe-publish-latest": "^1.1.1"
+  },
+  "dependencies": {
+    "eslint-config-airbnb-base": "^10.0.1"
   }
 }
