--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
 				"ignoreInlineComments": true
 			}
 		],
+		"class-methods-use-this": 0,
 		"eqeqeq": [
 			2,
 			"smart"
@@ -45,6 +46,7 @@
 		"no-console": 2,
 		"no-mixed-spaces-and-tabs": 2,
 		"no-param-reassign": 0,
+		"no-plusplus": 0,
 		"no-prototype-builtins": 0,
 		"no-return-await": 2,
 		"no-tabs": 0,
